# dokploy-preview-deployments-demo

./: Dockerfile  README.md  app.py  justfile  nixpacks.toml  pyproject.toml  test_app.py
src/dokploy_preview_deployments_demo/: __init__.py
static/: index.html
templates/: index.html
