[project]
name = "dokploy-preview-deployments-demo"
version = "0.1.0"
description = "Simple Flask app for Dokploy preview deployments"
requires-python = ">=3.13"
dependencies = ["Flask==3.1.2", "requests==2.31.0"]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
dokploy-preview-deployments-demo = { path = "." }

